feat: 프론트엔드 명세 기준 API 계약 정합(#120)
강의 응답 DTO 5종을 CourseResponse 하나로 통합하고, 신청 검증 순서를
시간표 중복, 동일 과목명, 학점 상한, 정원 순으로 재정의한다.
교양 조회를 이수구분 코드 기반으로 바꿔 이수구분 단독 조회와 교직,
군사학, 일반선택 조회를 열고, 학과 목록 조회를 신설한다.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013YFcv2nxeDi5rVhxaGe5d4